--- a/package.json
+++ b/package.json
@@ -20,9 +20,28 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "ngx-mask": "^8.2.0",
+    "angular2-text-mask": "^9.0.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "@auth0/angular-jwt": "^5.0.1",
+    "angular-datatables": "^11.1.1",
+    "angular-ng-autocomplete": "^2.0.5",
+    "body-parser": "^1.11.0",
+    "bootstrap": "^4.6.0",
+    "datatables.net": "^1.10.20",
+    "datatables.net-dt": "^1.10.20",
+    "dateformat": "^4.5.1",
+    "express": "^4.11.2",
+    "jquery": "^3.6.0",
+    "net": "^1.0.2",
+    "ng-drag-drop": "^5.0.0",
+    "ngx-cookie-service": "^2.4.0",
+    "ngx-spinner": "^7.2.0",
+    "socket.io": "^1.3.2",
+    "sockjs-client": "^1.4.0",
+    "stompjs": "^2.3.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
