--- a/angular.json
+++ b/angular.json
@@ -26,16 +26,15 @@
               "src/styles.css",
               "src/styles/fontawesome-free/css/all.min.css",
               "src/styles/sb-admin-2.css",
-              "src/styles/datatables/dataTables.bootstrap4.min.css"
+              "src/styles/datatables/dataTables.bootstrap4.min.css",
+              "node_modules/datatables.net-dt/css/jquery.dataTables.css"
             ],
             "scripts": [
-              "src/assets/js/jquery/jquery.min.js",
+              "node_modules/jquery/dist/jquery.min.js",
               "src/assets/js/bootstrap/js/bootstrap.bundle.min.js",
               "src/assets/js/jquery-easing/jquery.easing.min.js",
               "src/assets/js/sb-admin-2.min.js",
-              "src/assets/js/datatables/jquery.dataTables.min.js",
-              "src/assets/js/datatables/dataTables.bootstrap4.min.js",
-              "src/assets/js/demo/datatables-demo.js"
+              "node_modules/datatables.net/js/jquery.dataTables.js"
             ]
           },
           "configurations": {
