--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@auth0/angular-jwt": "^5.0.1",
     "angular-datatables": "^11.1.1",
     "angular-ng-autocomplete": "^2.0.5",
+    "ng-multiselect-dropdown": "0.2.4",
     "angular2-text-mask": "^9.0.0",
     "body-parser": "^1.11.0",
     "bootstrap": "^4.6.0",
